// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <ButtonField> inside a Form 1`] = `
<DocumentFragment>
  <form
    id="buttonFieldForm.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-1"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text"
          id="buttonFieldForm.form.abc"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Example Button
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should render <ButtonField> inside a FormView 1`] = `
<DocumentFragment>
  <form
    id="buttonFieldFormView.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation3 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-2"
      >
        <div
          class="MuiBox-root MuiBox-root-3"
        >
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root-4"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text"
                  id="buttonFieldFormView.form.abc"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    Example Button
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
